# Distributed-Workflow-Orchestrator

./: .gitignore  Dockerfile  README.md  commit_by_commit.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: sample_dag.yaml  sample_module.py  sample_upload.json  sample_upload.yaml
src/orchestrator/: __init__.py  api.py  dag.py  executor.py  persistence.py  scheduler.py  utils.py  worker.py
src/tests/: conftest.py  test_api.py  test_dag.py  test_scheduler.py
