[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-workflow-orchestrator"
version = "0.1.0"
description = "Reference implementation of a pluggable distributed workflow orchestrator."
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{ name = "Distributed Systems Team" }
]
dependencies = []

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["src/tests"]
